# AchillesOracle

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  Makefile  PENTEST.md  README.md  SECURITY.md  dev-requirements.in  dev-requirements.txt  docker-compose.yml  package-lock.json  pyproject.toml  requirements.in  requirements.txt  test_run.py
.github/: dependabot.yml
.github/workflows/: ci.yml  enable-security.yml  publish-images.yml
achillesoracle/: settings.py  vault_client.py
achillesoracle/scanner/: cli.py  engine.py  report.py  utils.py
achillesoracle/scanner/checks/: cms_check.py  cookie_check.py  csp_check.py  dns_security_check.py  headers_check.py  hsts_check.py  js_library_check.py  mixed_content_check.py  open_redirect_check.py  permissions_policy_check.py  port_check.py  redirect_check.py  referrer_policy_check.py  security_score_check.py  server_banner.py  sitemap_robots_check.py  ssl_check.py  ssrf_parameter_check.py  subdomain_check.py  tech_fingerprint_check.py  whois_check.py  x_content_type_options_check.py
api/: adapters.py  billing.py  models.py  server.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
scanner/: cli.py  engine.py
scanner/checks/: directory_exposure_check.py  dns_check.py  security_score_check.py  subdomain_check.py  tls_check.py  x_frame_options_check.py
tests/: test_engine.py  test_security_score.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
ui/src/api/: client.js
ui/src/components/: Header.jsx  IssueCard.jsx  ScoreBadge.jsx
(+3 files in other folders)
